# arch_nav

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  package.xml  sitemap.xml
api/arch-nav/: index.html
api/arch-nav-api/: index.html
api/driver-interfaces/: index.html
architecture/driver-lifecycle/: index.html
architecture/overview/: index.html
cmake/: arch_navConfig.cmake.in
config/: arch_nav_config.yaml  navigation_config.yaml
development/build-and-test/: index.html
development/concurrency-notes/: index.html
development/writing-drivers/: index.html
docs/: index.md
docs/api/: arch-nav-api.md  arch-nav.md  driver-interfaces.md
docs/architecture/: driver-lifecycle.md  overview.md
docs/development/: build-and-test.md  concurrency-notes.md  writing-drivers.md
docs/getting-started/: first-run.md  installation.md
drivers/: arch_nav_mavsdk_driver
getting-started/first-run/: index.html
getting-started/installation/: index.html
include/: arch_nav.hpp  arch_nav_api.hpp  arch_nav_core.hpp  navigation_system_core.hpp
include/arch_nav/: arch_nav.hpp  arch_nav_api.hpp
include/arch_nav/constants/: command_response.hpp  operation_status.hpp  reference_frame.hpp  vehicle_status_states.hpp
include/arch_nav/context/: vehicle_context.hpp
include/arch_nav/driver/: driver_plugin_loader.hpp  driver_registry.hpp  i_command_dispatcher.hpp  i_platform_driver.hpp
include/arch_nav/model/report/: driver_operation_data.hpp  operation_report.hpp  takeoff_driver_operation_data.hpp  takeoff_report.hpp  waypoint_driver_operation_data.hpp  waypoint_report.hpp
include/arch_nav/model/vehicle/: behavior_subject.hpp  global_position.hpp  kinematics.hpp  trajectory_point.hpp  vehicle_status.hpp  waypoint.hpp
include/arch_nav/utils/: frame_converter.hpp  gnss_local_frame.hpp
include/config/: arch_nav_config.hpp  arch_nav_config_loader.hpp  local_planner_config.hpp  navigation_config.hpp  navigation_config_loader.hpp
include/core/constants/: command_response.hpp  operation_status.hpp  reference_frame.hpp  vehicle_status_states.hpp
include/core/context/: vehicle_context.hpp
include/core/controller/: navigation_task.hpp  operational_controller.hpp  vehicle_command.hpp
include/core/model/report/: operation_report.hpp  waypoint_report.hpp
include/core/model/vehicle/: behavior_subject.hpp  geo_waypoint.hpp  global_position.hpp  kinematics.hpp  trajectory_point.hpp  vehicle_status.hpp  waypoint.hpp
include/core/planner/: kinematic_point_to_point_local_planner.hpp  local_planner.hpp
include/dispatchers/: i_command_dispatcher.hpp
include/platform/: driver_plugin_loader.hpp  driver_registry.hpp  i_platform_driver.hpp
include/utils/: frame_converter.hpp  gnss_local_frame.hpp
scripts/: build.sh  clean.sh
search/: search_index.json
src/: arch_nav.cpp  arch_nav_api.cpp  arch_nav_core.cpp  arch_nav_core.hpp  navigation_system_core.cpp
src/config/: arch_nav_config_loader.cpp  navigation_config_loader.cpp
src/context/: vehicle_context.cpp
src/controller/: navigation_task.hpp  operational_controller.cpp  operational_controller.hpp  vehicle_command.hpp
src/controller/commands/: arm_command.hpp  clear_roi_command.hpp  disarm_command.hpp  set_roi_command.hpp
src/controller/states/: disarmed_state.cpp  disarmed_state.hpp  handover_state.cpp  handover_state.hpp  idle_state.cpp  idle_state.hpp  running_state.cpp  running_state.hpp
src/controller/tasks/: change_yaw_task.cpp  change_yaw_task.hpp  land_task.cpp  land_task.hpp  takeoff_task.cpp  takeoff_task.hpp  trajectory_execution_task.cpp  trajectory_execution_task.hpp  waypoint_task.cpp  waypoint_task.hpp
src/core/controller/: operational_controller.cpp
src/core/controller/commands/: arm_command.hpp  disarm_command.hpp
src/core/controller/states/: disarmed_state.cpp  disarmed_state.hpp  handover_state.cpp  handover_state.hpp  iddle_state.cpp  idle_state.cpp  idle_state.hpp  running_state.cpp  running_state.hpp
src/core/controller/tasks/: land_task.cpp  land_task.hpp  takeoff_task.cpp  takeoff_task.hpp  trajectory_execution_task.hpp  waypoint_task.cpp  waypoint_task.hpp
src/core/planner/: kinematic_point_to_point_local_planner.cpp
src/driver/: driver_plugin_loader.cpp  driver_registry.cpp
src/platform/: driver_plugin_loader.cpp  driver_registry.cpp
src/utils/: frame_converter.cpp  gnss_local_frame.cpp
test/: test_kinematic_point_to_point_local_planner.cpp
test/unit/controller/: test_operational_controller.cpp
test/unit/core/context/: test_vehicle_context.cpp
test/unit/core/state/: test_global_position.cpp  test_kinematics.cpp  test_vehicle_status.cpp
test/unit/utils/: test_gnss_local_frame.cpp
