<?xml version="1.0"?>
<package format="3">
  <name>arch-nav</name>
  <version>0.0.1</version>
  <description>Arch-Nav UAV Navigation Stack</description>
  <maintainer email="mandominguez97@gmail.com">Manuel Domínguez Montero</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geographic_msgs</depend>
  <depend>yaml-cpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
